--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@topcoder-framework/domain-resource",
+  "name": "@topcoder-framework/domain-challenge",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:proto:client": "node bin/gen-resource-client.js"
+    "build:proto:client": "node bin/gen-challenge-client.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "typescript": "^4.8.4"
   },
   "volta": {
-    "node": "18.12.1"
+    "node": "18.12.1",
+    "npm": "9.2.0"
   }
 }
