fix(build): composit tsconfig

--- a/domains/domain-challenge/src/models/tsconfig.json
+++ b/domains/domain-challenge/src/models/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "extends": "../../tsconfig.json",
-  "compilerOptions": { "outDir": "../../dist/models" },
-  "include": ["**/*"]
+  "compilerOptions": {
+    "composite": true,
+    "outDir": "../../dist/models",
+    "noImplicitReturns": false,
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": ["**/*"],
+  "exclude": ["node_modules"]
 }
