--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:proto:client": "node bin/gen-challenge-client.js"
+    "build:proto:client": "node bin/gen-challenge-client.js",
+    "build:app": "rimraf dist && tsc -b",
+    "build": "npm run build:proto:client && npm run build:app",
+    "build:include:deps": "lerna run --scope $npm_package_name --include-dependencies build"
   },
   "author": "",
   "license": "ISC",
@@ -15,13 +18,14 @@
     "tslib": "^2.4.1"
   },
   "devDependencies": {
-    "@types/node": "^18.11.8",
+    "@types/node": "^18.11.17",
     "rimraf": "^3.0.2",
     "ts-proto": "^1.131.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   },
   "volta": {
     "node": "18.12.1",
+    "typescript": "4.9.4",
     "npm": "9.2.0"
   }
 }
