--- a/domains/domain-challenge/tsconfig.json
+++ b/domains/domain-challenge/tsconfig.json
@@ -2,9 +2,16 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "lib": ["ES2021"],
+    "module": "commonjs",
+    "target": "ES2021",
+    "strict": true,
+    "moduleResolution": "Node16",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/"],
-  "exclude": ["src/models"],
+  "include": ["typings/global.d.ts", "src/**/*"],
+  "exclude": ["node_modules", "src/models"],
   "references": [{ "path": "src/models" }]
 }
