--- a/domains/domain-challenge/tsconfig.json
+++ b/domains/domain-challenge/tsconfig.json
@@ -2,14 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
-    "lib": ["ES2021"],
-    "module": "commonjs",
-    "target": "ES2021",
-    "strict": true,
-    "moduleResolution": "Node16",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "rootDir": "src"
   },
   "include": ["typings/global.d.ts", "src/**/*"],
   "exclude": ["node_modules", "src/models"],
