build: add centralized build
* add husky to lint staged files
* add commitlint

--- a/domains/domain-challenge/tsconfig.es.json
+++ b/domains/domain-challenge/tsconfig.es.json
@@ -6,6 +6,7 @@
     "rootDir": "src",
     "composite": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["typings/global.d.ts", "src/*"],
+  "exclude": ["node_modules", "src/models"],
+  "references": [{ "path": "src/models/tsconfig.es.json" }]
 }
