--- a/tsconfig.es.json
+++ b/tsconfig.es.json
@@ -1,10 +1,6 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "importHelpers": true,
-    "module": "esnext",
-    "noEmitHelpers": true,
-    "target": "ES2022",
-    "strict": true
+    "module": "esnext"
   }
 }
