--- a/domains/domain-resource/src/models/tsconfig.es.json
+++ b/domains/domain-resource/src/models/tsconfig.es.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.es.json",
   "compilerOptions": {
     "composite": true,
-    "outDir": "../../dist-cjs/models",
+    "outDir": "../../dist-es/models",
     "noImplicitReturns": false,
     "forceConsistentCasingInFileNames": true
   },
