--- a/lib/lib-logger/tsconfig.json
+++ b/lib/lib-logger/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../../tsconfig.es.json",
+  "extends": "../../tsconfig.cjs.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist-es",
+    "outDir": "dist-cjs",
     "rootDir": "src",
     "composite": true
   },
