--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "downlevelIteration": true,
-    "esModuleInterop": true,
     "incremental": true,
     "lib": ["ES2022"],
     "importHelpers": true,
@@ -18,10 +17,12 @@
       "@topcoder-framework/lib-*": ["lib/lib-*"]
     },
     "preserveConstEnums": true,
-    "removeComments": true,
+    "removeComments": false,
     "resolveJsonModule": true,
     "target": "ES2022",
-    "useUnknownInCatchVariables": false
+    "useUnknownInCatchVariables": false,
+    "esModuleInterop": true,
+    "declaration": true
   },
   "include": ["packages/", "lib/", "domains/"],
   "exclude": ["node_modules", "**/*.spec.ts"]
