--- a/domains/domain-challenge/tsconfig.es.json
+++ b/domains/domain-challenge/tsconfig.es.json
@@ -6,7 +6,7 @@
     "rootDir": "src",
     "composite": true
   },
-  "include": ["typings/global.d.ts", "src/*"],
+  "include": ["typings/global.d.ts", "src"],
   "exclude": ["node_modules", "src/models"],
   "references": [{ "path": "src/models/tsconfig.es.json" }]
 }
