--- a/domains/domain-challenge/tsconfig.json
+++ b/domains/domain-challenge/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist-cjs",
     "rootDir": "src",
+    "outDir": "dist-cjs",
     "composite": true
   },
-  "include": ["typings/global.d.ts", "src/*"],
+  "include": ["typings/global.d.ts", "src"],
   "exclude": ["node_modules", "src/models"],
   "references": [{ "path": "src/models" }]
 }
