--- a/domains/domain-resource/package.json
+++ b/domains/domain-resource/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/domain-resource",
-  "version": "0.0.1",
+  "version": "0.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -24,5 +24,8 @@
   },
   "volta": {
     "node": "18.12.1"
-  }
+  },
+  "files": [
+    "dist-*"
+  ]
 }
