--- a/lib/lib-logger/package.json
+++ b/lib/lib-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/lib-logger",
-  "version": "0.0.1",
+  "version": "0.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -36,5 +36,8 @@
     "concurrently": "^7.5.0",
     "typedoc": "^0.23.21",
     "typescript": "^4.9.3"
-  }
+  },
+  "files": [
+    "dist-*"
+  ]
 }
