--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,8 @@
     "forceConsistentCasingInFileNames": true,
     "downlevelIteration": true,
     "incremental": true,
-    "lib": ["ES2022"],
-    "importHelpers": true,
-    "noEmitHelpers": true,
-    "module": "commonjs",
+    "lib": ["ES2020"],
+    "module": "CommonJS",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "paths": {
@@ -17,12 +15,13 @@
       "@topcoder-framework/lib-*": ["lib/lib-*"]
     },
     "preserveConstEnums": true,
-    "removeComments": false,
+    "removeComments": true,
     "resolveJsonModule": true,
-    "target": "ES2022",
+    "target": "ES2020",
     "useUnknownInCatchVariables": false,
     "esModuleInterop": true,
-    "declaration": true
+    "skipLibCheck": true,
+    "importHelpers": true
   },
   "include": ["packages/", "lib/", "domains/"],
   "exclude": ["node_modules", "**/*.spec.ts"]
