--- a/lib/lib-logger/package.json
+++ b/lib/lib-logger/package.json
@@ -36,5 +36,8 @@
     "concurrently": "^7.5.0",
     "typedoc": "^0.23.21",
     "typescript": "^4.9.3"
-  }
+  },
+  "files": [
+    "dist-*"
+  ]
 }
