--- a/verdaccio/config.yaml
+++ b/verdaccio/config.yaml
@@ -7,17 +7,24 @@
 #
 
 storage: ./storage
+
 auth:
   htpasswd:
     file: ./htpasswd
+
 uplinks:
   npmjs:
     url: https://registry.npmjs.org/
+
 packages:
-  "@*/*":
+  "@topcoder-framework/*":
     access: $anonymous
     publish: $anonymous
     proxy: npmjs
   "**":
+    access: $all
+    publish: $authenticated
+    unpublish: $authenticated
     proxy: npmjs
+
 log: { type: stdout, format: pretty, level: http }
