--- a/domains/domain-challenge/src/models/tsconfig.json
+++ b/domains/domain-challenge/src/models/tsconfig.json
@@ -4,6 +4,6 @@
     "composite": true,
     "outDir": "../../dist-cjs"
   },
-  "include": ["./"],
+  "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
 }
