--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -6,7 +6,7 @@
   "types": "./dist-es/index.d.ts",
   "module": "./dist-es/index.js",
   "scripts": {
-    "build:proto:client": "scripty",
+    "build:proto": "scripty",
     "build": "scripty",
     "build:es": "scripty",
     "build:app": "scripty",
@@ -24,14 +24,13 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
-    "dotenv": "^16.0.3",
+    "@topcoder-framework/lib-common": "^0.2.1",
     "topcoder-interface": "github:topcoder-platform/plat-interface-definition#feat/challenge-domain",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
     "eslint": "^8.30.0",
-    "lerna": "^6.3.0",
     "rimraf": "^3.0.2",
     "ts-proto": "^1.131.0",
     "typescript": "^4.9.4"
