--- a/domains/domain-resource/package.json
+++ b/domains/domain-resource/package.json
@@ -14,6 +14,7 @@
   "author": "Rakib Ansary <rakibansary.saikot@wipro.com>",
   "license": "ISC",
   "dependencies": {
+    "@topcoder-framework/lib-common": "^0.2.1",
     "dotenv": "^16.0.3",
     "tslib": "^2.4.1"
   },
