refactor(domain-challenge): remove base client
* specific grpc-client instantiation does not seem to work
* when extendig from a base client. should be revisited later

--- a/domains/domain-challenge/tsconfig.json
+++ b/domains/domain-challenge/tsconfig.json
@@ -7,6 +7,6 @@
     "composite": true
   },
   "include": ["typings/global.d.ts", "src"],
-  "exclude": ["node_modules", "src/models"],
+  "exclude": ["node_modules", "src/models", "dist-cjs", "dist-es"],
   "references": [{ "path": "src/models" }]
 }
