--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/domain-challenge",
-  "version": "0.1.0",
+  "version": "0.1.1-ci.0",
   "description": "",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
@@ -24,8 +24,8 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
-    "@topcoder-framework/lib-common": "^0.1.0",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#feat/challenge-domain",
+    "@topcoder-framework/lib-common": "0.1.1-ci.0",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.1",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
@@ -42,5 +42,6 @@
   },
   "files": [
     "dist-*"
-  ]
+  ],
+  "gitHead": "09f04973d56ff16f1c92094e8e3a514da5dfa579"
 }
