--- a/lib/lib-common/package.json
+++ b/lib/lib-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/lib-common",
-  "version": "0.1.0",
+  "version": "0.1.1-ci.0",
   "description": "",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
@@ -25,7 +25,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "rimraf": "^3.0.2",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.1",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
@@ -41,5 +41,6 @@
   },
   "files": [
     "dist-*"
-  ]
+  ],
+  "gitHead": "09f04973d56ff16f1c92094e8e3a514da5dfa579"
 }
