--- a/lib/lib-common/package.json
+++ b/lib/lib-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/lib-common",
-  "version": "0.1.1-ci.0",
+  "version": "0.2.0",
   "description": "",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
