--- a/lib/lib-common/package.json
+++ b/lib/lib-common/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "rimraf": "^3.0.2",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.4",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#feat/update-interfaces",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
@@ -37,7 +37,8 @@
   "volta": {
     "node": "18.12.1",
     "typescript": "4.9.4",
-    "npm": "9.2.0"
+    "npm": "9.2.0",
+    "yarn": "1.22.19"
   },
   "files": [
     "dist-*"
