--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -20,12 +20,12 @@
   "scripty": {
     "path": "../../scripts/packages"
   },
-  "author": "Rakib Ansary <rakibansary.saikot@wipro.com>",
+  "author": "Rakib Ansary <rakibansary@topcoder.com>",
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/lib-common": "^0.2.1",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.4",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.6",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
