--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/lib-common": "^0.2.1",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.6",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.7",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
@@ -38,7 +38,8 @@
   "volta": {
     "node": "18.12.1",
     "typescript": "4.9.4",
-    "npm": "9.2.0"
+    "npm": "9.2.0",
+    "yarn": "1.22.19"
   },
   "files": [
     "dist-*"
