--- a/lib/lib-common/package.json
+++ b/lib/lib-common/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "rimraf": "^3.0.2",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.4",
+    "topcoder-interface": "/Users/hamidtavakoli/topcoder/plat-interface-definition",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
