--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "build": "scripty",
+    "build:proto": "scripty",
     "lint": "scripty",
     "format": "scripty",
     "clean": "scripty",
