feat: add legacy challenge phase:create (#11)
* feat: add anti-corruption layer
* grpc client to communicate with acl
* feat(domain-acl): add phase create interface

Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

--- a/domains/domain-acl/package.json
+++ b/domains/domain-acl/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@topcoder-framework/lib-common",
+  "name": "@topcoder-framework/domain-acl",
   "version": "0.4.0",
-  "description": "",
+  "description": "Topcoder Anti-Corruption Layer",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
   "module": "./dist-es/index.js",
@@ -24,20 +24,22 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
-    "rimraf": "^3.0.2",
+    "@topcoder-framework/lib-common": "^0.4.0",
     "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.10",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
     "eslint": "^8.30.0",
+    "rimraf": "^3.0.2",
     "ts-proto": "^1.131.0",
     "typescript": "^4.9.4"
   },
   "volta": {
     "node": "18.12.1",
     "typescript": "4.9.4",
-    "npm": "9.2.0"
+    "npm": "9.2.0",
+    "yarn": "1.22.19"
   },
   "files": [
     "dist-*"
