fix: proper main in package.json

--- a/domains/domain-submission/tsconfig.es.json
+++ b/domains/domain-submission/tsconfig.es.json
@@ -6,7 +6,11 @@
     "rootDir": "src",
     "composite": true
   },
-  "include": ["typings/global.d.ts", "src/*"],
-  "exclude": ["node_modules", "src/models"],
-  "references": [{ "path": "src/models/tsconfig.es.json" }]
+  "include": ["typings/global.d.ts", "src"],
+  "exclude": ["node_modules", "src/models", "dist-cjs", "dist-es"],
+  "references": [
+    {
+      "path": "src/models/tsconfig.es.json"
+    }
+  ]
 }
