--- a/domains/domain-submission/package.json
+++ b/domains/domain-submission/package.json
@@ -2,9 +2,11 @@
   "name": "@topcoder-framework/domain-submission",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
   "author": "Hamid Tavakoli <hamid@topcoder.com>",
   "license": "ISC",
+  "main": "./dist-cjs/index.js",
+  "types": "./dist-es/index.d.ts",
+  "module": "./dist-es/index.js",
   "scripts": {
     "build:proto": "scripty",
     "build": "scripty",
