feat(client-relational): add rdb client

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "workspaces": [
     "domains/*",
     "lib/*",
-    "packages/*"
+    "packages/*",
+    "clients/*"
   ],
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
