--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
+    "@topcoder-framework/client-relational": "^0.4.22-ci.0",
     "@topcoder-framework/lib-common": "^0.4.0",
     "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.10",
     "tslib": "^2.4.1"
