--- a/lib/lib-relational-query-builder/package.json
+++ b/lib/lib-relational-query-builder/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@topcoder-framework/domain-acl",
+  "name": "@topcoder-framework/lib-relational-query-builder",
   "version": "0.4.0",
-  "description": "Topcoder Anti-Corruption Layer",
+  "description": "",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
   "module": "./dist-es/index.js",
   "scripts": {
-    "build:proto": "scripty",
+    "build:proto": "echo 'no proto files'",
     "build": "scripty",
     "build:es": "scripty",
     "build:app": "scripty",
@@ -23,24 +23,21 @@
   "author": "Rakib Ansary <rakibansary@topcoder.com>",
   "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/client-relational": "^0.4.22-ci.0",
     "@topcoder-framework/lib-common": "^0.4.0",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.10",
+    "rimraf": "^3.0.2",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
     "eslint": "^8.30.0",
-    "rimraf": "^3.0.2",
     "ts-proto": "^1.131.0",
     "typescript": "^4.9.4"
   },
   "volta": {
     "node": "18.12.1",
     "typescript": "4.9.4",
-    "npm": "9.2.0",
-    "yarn": "1.22.19"
+    "npm": "9.2.0"
   },
   "files": [
     "dist-*"
