--- a/verdaccio/config.yaml
+++ b/verdaccio/config.yaml
@@ -26,5 +26,8 @@ packages:
     publish: $authenticated
     unpublish: $authenticated
     proxy: npmjs
+listen:
+  - localhost:4873
+  # - 0.0.0.0:4873
 
 log: { type: stdout, format: pretty, level: http }
