--- a/lib/lib-logger/package.json
+++ b/lib/lib-logger/package.json
@@ -24,6 +24,8 @@
     "npm": "9.1.2"
   },
   "dependencies": {
+    "@topcoder-framework/client-relational": "^0.4.22-ci.0",
+    "@topcoder-framework/lib-common": "^0.4.0",
     "@types/lodash": "^4.14.189",
     "joi": "^17.7.0",
     "lodash": "^4.17.21",
