--- a/clients/client-relational/.eslintrc
+++ b/clients/client-relational/.eslintrc
@@ -2,5 +2,8 @@
   "extends": "../../.eslintrc",
   "parserOptions": {
     "project": "tsconfig.json"
+  },
+  "rules": {
+    "@typescript-eslint/no-explicity-any": "off"
   }
 }
