--- a/clients/client-relational/package.json
+++ b/clients/client-relational/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/lib-common": "0.4.23-ci.0",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.10",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#feat/challenge-acl-proto",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
@@ -44,5 +44,5 @@
   "files": [
     "dist-*"
   ],
-  "gitHead": "0ac2446dae898416b081dcb8fbae11c558e84b46"
+  "gitHead": "3bec4359e1928de44f5173b4ccee57ebcfbbabad"
 }
