--- a/domains/domain-acl/package.json
+++ b/domains/domain-acl/package.json
@@ -23,10 +23,10 @@
   "author": "Rakib Ansary <rakibansary@topcoder.com>",
   "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.8.0",
+    "@grpc/grpc-js": "^1.8.7",
     "@topcoder-framework/client-relational": "^0.4.22-ci.0",
     "@topcoder-framework/lib-common": "^0.4.0",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.10",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#feat/challenge-acl-proto",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
