--- a/lib/lib-common/package.json
+++ b/lib/lib-common/package.json
@@ -26,7 +26,7 @@
     "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/client-relational": "^0.4.22-ci.0",
     "rimraf": "^3.0.2",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.10",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#feat/challenge-acl-proto",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
