--- a/lib/lib-relational-query-builder/package.json
+++ b/lib/lib-relational-query-builder/package.json
@@ -37,7 +37,8 @@
   "volta": {
     "node": "18.12.1",
     "typescript": "4.9.4",
-    "npm": "9.2.0"
+    "npm": "9.2.0",
+    "yarn": "1.22.19"
   },
   "files": [
     "dist-*"
