--- a/clients/client-relational/package.json
+++ b/clients/client-relational/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/client-relational",
-  "version": "0.4.24-ci.0",
+  "version": "0.4.0",
   "description": "Topcoder gRPC client stub for relational gRPC service",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
@@ -24,8 +24,8 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
-    "@topcoder-framework/lib-common": "0.4.23-ci.0",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#feat/challenge-acl-proto",
+    "@topcoder-framework/lib-common": "0.4.0",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.14",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
