--- a/lib/lib-common/package.json
+++ b/lib/lib-common/package.json
@@ -24,9 +24,9 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
-    "@topcoder-framework/client-relational": "^0.4.22-ci.0",
+    "@topcoder-framework/client-relational": "^0.4.0",
     "rimraf": "^3.0.2",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#feat/challenge-acl-proto",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.14",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
