--- a/clients/client-relational/package.json
+++ b/clients/client-relational/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/client-relational",
-  "version": "0.4.1-ci.0",
+  "version": "0.4.0",
   "description": "Topcoder gRPC client stub for relational gRPC service",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
@@ -24,7 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
-    "@topcoder-framework/lib-common": "0.4.1-ci.0",
+    "@topcoder-framework/lib-common": "0.4.0",
     "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.14",
     "tslib": "^2.4.1"
   },
@@ -44,5 +44,5 @@
   "files": [
     "dist-*"
   ],
-  "gitHead": "1d141d618c13803ef18ab7b4c688456a94a40dfc"
+  "gitHead": "5608d23e33f918f10b8d4f30271bb9f8de8ee312"
 }
