--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     ]
   },
   "publishConfig": {
-    "@topcoder-framework:registry": "https://topcoder-409275337247.d.codeartifact.us-east-1.amazonaws.com/npm/topcoder-framework/"
+    "registry": "https://topcoder-409275337247.d.codeartifact.us-east-1.amazonaws.com/npm/topcoder-framework/"
   },
   "volta": {
     "lerna": "6.5.1",
