feat(domain-acl): add interfaces for anticorruption layer (#19)
* refactor(domain-challenge): update challenge domain

* feat(domain-acl): create client stubs

* feat(domain-acl): create client stubs

* feat(domain-acl): implement update query

* feat(domain-acl): fix error

* feat(client-relational): unwrap return values of select query

* feat(domain-acl): complete challenge update interfaces

* fix(domain-acl): update method parameters

* feat: improve query builder

* where clause now takes [TableColumn, Operator, Value] or ScanCriteria[]

Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

* feat(lib-common): add update result interface

Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

* fix(domain-acl): update method parameters and implement missing interfaces

* fix(domain-acl): update interfaces for acl

* feature: improve query builder (#18)

* feat: improve query builder

* where clause now takes [TableColumn, Operator, Value] or ScanCriteria[]

Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

* feat(lib-common): add update result interface

Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

---------

Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

* fix: build errors

* feat(client-relational): improve query build and query runner interface

* feat(lib-common): add check-exists message

* refactor: use v0.0.14 proto definitions

* fix(lib-common): remove circular dependency

* feat(client-relational): add support for raw query result

* feat(domain-acl): complete challenge update interfaces

* fix(domain-acl): add prize service

* feat(domain-acl): add challenge:create

Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

* fix: import

* chore: fix versioning

* v0.4.1

* chore: lerna version bump

* v0.4.2

* chore: release

* chore: test release

* chore: fix registry url

* chore: use v0.0.17 topcoder-interface

Signed-off-by: Rakib A

--- a/clients/client-relational/package.json
+++ b/clients/client-relational/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/client-relational",
-  "version": "0.4.24-ci.0",
+  "version": "0.4.4",
   "description": "Topcoder gRPC client stub for relational gRPC service",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
@@ -24,8 +24,8 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
-    "@topcoder-framework/lib-common": "0.4.23-ci.0",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.10",
+    "@topcoder-framework/lib-common": "^0.4.4",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.18",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
@@ -36,7 +36,7 @@
     "typescript": "^4.9.4"
   },
   "volta": {
-    "node": "18.12.1",
+    "node": "18.14.1",
     "typescript": "4.9.4",
     "npm": "9.2.0",
     "yarn": "1.22.19"
@@ -44,5 +44,5 @@
   "files": [
     "dist-*"
   ],
-  "gitHead": "246d4ff9ddbe501dac63172458b132a327589e5b"
+  "gitHead": "8c19fdcd36bcccc5e952aa909e4a30caf2943340"
 }
