--- a/lib/lib-logger/package.json
+++ b/lib/lib-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/lib-logger",
-  "version": "0.4.0",
+  "version": "0.4.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,13 +19,13 @@
   "author": "Rakib Ansary <rakibansary@topcoder.com>",
   "license": "ISC",
   "volta": {
-    "node": "18.12.1",
+    "node": "18.14.1",
     "typescript": "4.9.3",
     "npm": "9.1.2"
   },
   "dependencies": {
-    "@topcoder-framework/client-relational": "^0.4.22-ci.0",
-    "@topcoder-framework/lib-common": "^0.4.0",
+    "@topcoder-framework/client-relational": "^0.4.4",
+    "@topcoder-framework/lib-common": "^0.4.4",
     "@types/lodash": "^4.14.189",
     "joi": "^17.7.0",
     "lodash": "^4.17.21",
@@ -41,5 +41,6 @@
   },
   "files": [
     "dist-*"
-  ]
+  ],
+  "gitHead": "8c19fdcd36bcccc5e952aa909e4a30caf2943340"
 }
