feat: add support for building on windows
Signed-off-by: Rakib Ansary <ansaryfantastic@gmail.com>

--- a/clients/client-relational/package.json
+++ b/clients/client-relational/package.json
@@ -18,7 +18,8 @@
     "prepublishOnly": "yarn clean && yarn build"
   },
   "scripty": {
-    "path": "../../scripts/packages"
+    "path": "../../scripts/packages",
+    "windowsPath": "../../scripts-win/packages"
   },
   "author": "Rakib Ansary <rakibansary@topcoder.com>",
   "license": "ISC",
