--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "npm-registry:login": "scripty"
   },
   "scripty": {
-    "path": "./scripts/workspace"
+    "path": "./scripts/workspace",
+    "windowsPath": "./scripts-win/workspace"
   },
   "private": true,
   "workspaces": [
