--- a/lib/lib-common/package.json
+++ b/lib/lib-common/package.json
@@ -18,7 +18,8 @@
     "prepublishOnly": "yarn clean && yarn build"
   },
   "scripty": {
-    "path": "../../scripts/packages"
+    "path": "../../scripts/packages",
+    "windowsPath": "../../scripts-win/packages"
   },
   "author": "Rakib Ansary <rakibansary@topcoder.com>",
   "license": "ISC",
