fix(domain-submission): update client stubs

--- a/domains/domain-submission/package.json
+++ b/domains/domain-submission/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@topcoder-framework/lib-common": "^0.2.1",
     "dotenv": "^16.0.3",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.20",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
@@ -33,7 +34,8 @@
     "typescript": "^4.8.4"
   },
   "volta": {
-    "node": "18.12.1"
+    "node": "18.12.1",
+    "yarn": "1.22.19"
   },
   "files": [
     "dist-*"
