--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -27,7 +27,7 @@
     "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/client-relational": "^0.10.5",
     "@topcoder-framework/lib-common": "^0.10.5",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.39",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definitionv0.0.40",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
