fix: update to topcoder-interface v0.0.40
Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

--- a/clients/client-relational/package.json
+++ b/clients/client-relational/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/lib-common": "^0.10.6",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definitionv0.0.40",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.40",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
