--- a/domains/domain-acl/package.json
+++ b/domains/domain-acl/package.json
@@ -27,7 +27,7 @@
     "@grpc/grpc-js": "^1.8.7",
     "@topcoder-framework/client-relational": "^0.11.1",
     "@topcoder-framework/lib-common": "^0.11.0",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.49",
+    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.50-beta-1",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
