fix(lib-pubsub): add eslint configuration

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,9 +11,11 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2022
+    "ecmaVersion": 2022,
+    "project": "./tsconfig"
   },
   "rules": {
-    "prefer-const": "error"
+    "prefer-const": "error",
+    "@typescript-eslint/await-thenable": "off"
   }
 }
