chore(lib-logger): add script to format code

--- a/lib/lib-logger/package.json
+++ b/lib/lib-logger/package.json
@@ -10,7 +10,8 @@
     "build:app": "scripty",
     "build:include:deps": "scripty",
     "clean": "scripty",
-    "lint": "scripty"
+    "lint": "scripty",
+    "format": "scripty"
   },
   "scripty": {
     "path": "../../scripts/packages",
