--- a/clients/client-relational/.eslintrc
+++ b/clients/client-relational/.eslintrc
@@ -4,6 +4,9 @@
     "project": "tsconfig.json"
   },
   "rules": {
-    "@typescript-eslint/no-explicity-any": "off"
+    "@typescript-eslint/no-explicity-any": "off",
+    "@typescript-eslint/no-unsafe-assignment":"off",
+    "@typescript-eslint/no-unsafe-member-access":"off",
+    "@typescript-eslint/no-unsafe-argument":"off"
   }
 }
