--- a/lib/lib-auth/package.json
+++ b/lib/lib-auth/package.json
@@ -24,6 +24,7 @@
     "npm": "9.1.2"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.8.0",
     "@types/jsonwebtoken": "^9.0.2",
     "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^3.0.1",
