--- a/lib/lib-auth/package.json
+++ b/lib/lib-auth/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "axios": "^1.4.0",
     "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^3.0.1",
     "lodash": "^4.17.21"
