--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -27,7 +27,7 @@
     "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/client-relational": "^0.21.1-PLAT-3491.0",
     "@topcoder-framework/lib-common": "^0.21.1-PLAT-3491.0",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.59-PLAT-3491.1",
+    "topcoder-interface": "0.1.0-PLAT-3491.2",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
