feat: add skills to challenge

--- a/clients/client-relational/package.json
+++ b/clients/client-relational/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/lib-common": "^0.23.0",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.58-beta-1",
+    "topcoder-interface": "0.1.0-PLAT-3614.1",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
