--- a/clients/client-relational/package.json
+++ b/clients/client-relational/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/client-relational",
-  "version": "0.23.0",
+  "version": "0.23.1-PLAT-3614.0",
   "description": "Topcoder gRPC client stub for relational gRPC service",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
@@ -25,7 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
-    "@topcoder-framework/lib-common": "^0.23.0",
+    "@topcoder-framework/lib-common": "^0.23.1-PLAT-3614.0",
     "topcoder-interface": "0.1.0-PLAT-3614.1",
     "tslib": "^2.4.1"
   },
