--- a/domains/domain-resource/package.json
+++ b/domains/domain-resource/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/domain-resource",
-  "version": "0.23.0",
+  "version": "0.23.1-PLAT-3614.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,8 +15,8 @@
   "author": "Rakib Ansary <rakibansary@topcoder.com>",
   "license": "ISC",
   "dependencies": {
-    "@topcoder-framework/client-relational": "^0.23.0",
-    "@topcoder-framework/lib-common": "^0.23.0",
+    "@topcoder-framework/client-relational": "^0.23.1-PLAT-3614.0",
+    "@topcoder-framework/lib-common": "^0.23.1-PLAT-3614.0",
     "dotenv": "^16.0.3",
     "tslib": "^2.4.1"
   },
