--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
-  "version": "0.23.0",
+  "version": "0.23.1-PLAT-3614.0",
   "npmClient": "yarn",
   "packages": ["domains/*", "lib/*", "packages/*", "clients/*"]
 }
