--- a/clients/client-relational/package.json
+++ b/clients/client-relational/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/lib-common": "^0.22.1-PLAT-3491.9",
-    "topcoder-proto-registry": "0.1.0-PLAT-3491.7",
+    "topcoder-proto-registry": "0.1.0",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
