--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -27,7 +27,7 @@
     "@grpc/grpc-js": "^1.8.0",
     "@topcoder-framework/client-relational": "^0.22.1-PLAT-3491.9",
     "@topcoder-framework/lib-common": "^0.22.1-PLAT-3491.9",
-    "topcoder-proto-registry": "0.1.0-PLAT-3491.7",
+    "topcoder-proto-registry": "0.1.0",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
