--- a/clients/client-relational/package.json
+++ b/clients/client-relational/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/client-relational",
-  "version": "0.23.0",
+  "version": "0.22.1-PLAT-3491.9",
   "description": "Topcoder gRPC client stub for relational gRPC service",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
@@ -25,8 +25,8 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
-    "@topcoder-framework/lib-common": "^0.23.0",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.58-beta-1",
+    "@topcoder-framework/lib-common": "^0.22.1-PLAT-3491.9",
+    "topcoder-proto-registry": "0.1.0",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
