--- a/lib/lib-common/package.json
+++ b/lib/lib-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/lib-common",
-  "version": "0.23.0",
+  "version": "0.22.1-PLAT-3491.9",
   "description": "",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "rimraf": "^3.0.2",
-    "topcoder-interface": "github:topcoder-platform/plat-interface-definition#v0.0.58-beta-1",
+    "topcoder-proto-registry": "0.1.0",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
