--- a/domains/domain-challenge/package.json
+++ b/domains/domain-challenge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topcoder-framework/domain-challenge",
-  "version": "0.22.1-PLAT-3491.9",
+  "version": "0.23.0",
   "description": "",
   "main": "./dist-cjs/index.js",
   "types": "./dist-es/index.d.ts",
@@ -25,8 +25,8 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
-    "@topcoder-framework/client-relational": "^0.22.1-PLAT-3491.9",
-    "@topcoder-framework/lib-common": "^0.22.1-PLAT-3491.9",
+    "@topcoder-framework/client-relational": "^0.23.0",
+    "@topcoder-framework/lib-common": "^0.23.0",
     "topcoder-proto-registry": "0.1.0",
     "tslib": "^2.4.1"
   },
